[Branding]Spalsh Image

--- a/erpnext/templates/includes/footer/footer_extension.html
+++ b/erpnext/templates/includes/footer/footer_extension.html
@@ -10,8 +10,8 @@
 		</div>
 	</div>
     <div class="text-center text-muted small" style="padding: 30px;">
-        <a href="https://erpnext.com?source=website_footer" target="_blank" class="text-extra-muted">
-            Powered by ERPNext</a>
+        <a href="http://aeronsolution.com/" target="_blank" class="text-extra-muted">
+            Powered by AeronERP</a>
     </div>
 </div>
 <script>
